# gui-vizkit

./: .gitignore  CMakeLists.txt  History.txt  Manifest.txt  README  README.markdown  Rakefile  manifest.xml
ext/vizkittypelib/: CMakeLists.txt  TypelibQtAdapter.cpp  TypelibQtAdapter.h  TypelibToQVariant.cpp  extconf.rb
lib/: type_specialize.rb
lib/vizkit/: connection_manager.rb  connector_objects.rb  context_menu.rb  plugin.rb  plugin_accessor.rb  plugin_extensions.rb  qt_bugfix.rb  qt_orocos.rb  tree_view.rb  typelib_qt_adapter.rb  uiloader.rb  vizkit.rb  vizkit_items.rb  widget_task_connector.rb
ruby/lib/: output_port.rb  uiloader.rb  vizkit.rb
ruby/test/: suite.rb  test.rb  test.ui  test_compound_display.rb  test_connector_objects.rb  test_helper.rb  test_oqconnection.rb  test_task_proxy.rb  (+7 more)
src/: CMakeLists.txt  CompositeViewerQOSG.cpp  CompositeViewerQOSG.hpp  GridNode.cpp  GridNode.hpp  MouseManipulationManipulator.cpp  MouseManipulationManipulator.h  QOSGWidget.cpp  QOSGWidget.hpp  QVisualizationTestWidget.hpp  QVizkitWidget.cpp  QVizkitWidget.hpp  TypelibQtAdapter.cpp  TypelibQtAdapter.h  TypelibToQVariant.cpp  TypelibToQVariant.hpp  Uncertainty.cpp  Uncertainty.hpp  VizPlugin.cpp  VizPlugin.hpp  Vizkit3DHelper.cpp  Vizkit3DHelper.hpp  Vizkit3DWidget.cpp  Vizkit3DWidget.hpp
test/: suite.rb  test.ui  test_connector_objects.rb  test_helper.rb  test_tree_view.rb  test_typelib_qt_adapter.rb  test_uiloader.rb  test_vizkit.rb  test_vizkit3d.rb  test_vizkit_items.rb  test_widget_task_connector.rb  test_widgets.rb
viz/: LaserScanVisualization.cpp
(+97 files in other folders)
